...
                setEmail(text);
                setEmailError(null);
              }}
              onBlur={validateEmail}
              onSubmitEditing={() => (isReady ? handleSubmit() : passwordRef.current?.focus())}
              returnKeyType={isReady ? 'done' : 'next'}
              placeholder={t`Email`}
              autoCapitalize="none"
              keyboardType="email-address"
              autoComplete="email"
              size="$4"
            />
          </FormField>
...
              }}
              onBlur={checkPasswordMatch}
              onSubmitEditing={() =>
                isReady ? handleSubmit() : confirmPasswordRef.current?.focus()
              }
              returnKeyType={isReady ? 'done' : mode === 'sign-up' ? 'next' : 'done'}
              placeholder={t`Password`}
              autoComplete={mode === 'sign-up' ? 'new-password' : 'current-password'}
            />
          </FormField>

          {mode === 'sign-up' ? (
            <FormField error={null}>
...
